prover-ray/zkcdriver/testdata/synced/invalid/static_08.zkc
//error:6:1-2:empty static memory

const TEST:u16 = 0xffff

static reftable(addr:u16) -> (r:u16) {
}
